@@ -135,4 +135,25 @@ if LIBCCD_CYL_CYL
 AM_CPPFLAGS += -DdLIBCCD_CYL_CYL
 endif
 
+if LIBCCD_CAP_CYL
+AM_CPPFLAGS += -DdLIBCCD_CAP_CYL
+endif
+
+if LIBCCD_CONVEX_BOX
+AM_CPPFLAGS += -DdLIBCCD_CONVEX_BOX
+endif
+if LIBCCD_CONVEX_CAP
+AM_CPPFLAGS += -DdLIBCCD_CONVEX_CAP
+endif
+if LIBCCD_CONVEX_CYL
+AM_CPPFLAGS += -DdLIBCCD_CONVEX_CYL
+endif
+if LIBCCD_CONVEX_SPHERE
+AM_CPPFLAGS += -DdLIBCCD_CONVEX_SPHERE
+endif
+if LIBCCD_CONVEX_CONVEX
+AM_CPPFLAGS += -DdLIBCCD_CONVEX_CONVEX
+endif
+
+
 endif
